# particle-accelerator

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  accelerator-sim-handoff.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CONVENTIONS.md  ROADMAP.md
examples/: build_a_machine.py
pipelines/ee_mumu_delphes/: README.md  analyze.py  extract_reco.C  generate_hepmc.cc  run_pipeline.py
pipelines/ee_mumu_pythia/: README.md  analyze.py  generate_pythia.cc  run_pipeline.py
pipelines/pp_W_mt/: README.md  analyze.py  extract_kinematics.C  generate_hepmc.cc  run_pipeline.py
pipelines/pp_mumu_drellyan/: README.md  analyze.py  analyze_angular.py  extract_kinematics.C  extract_mass.C  generate_hepmc.cc  run_pipeline.py
pipelines/pp_ttbar_btag/: README.md  analyze.py  eval_formulas.C  extract_jets.C  generate_hepmc.cc  run_pipeline.py
src/accsim/: __init__.py  acceleration.py  collider.py  coords.py  features.py  lattice.py  lifetime.py  longitudinal.py  plotting.py  radiation.py  reference.py  symplectic.py  tracking.py  tune.py  twiss.py
src/accsim/elements/: __init__.py  aperture.py  beambeam.py  dipole.py  drift.py  element.py  quadrupole.py  rfcavity.py  sextupole.py  skew_quadrupole.py
src/accsim/events/: __init__.py  btag.py  dilution.py  electroweak.py  generator.py  kinematics.py  matrix_element.py  phase_space.py  plotting.py
tests/: conftest.py
tests/analytic/: test_acceleration.py  test_angular_coefficients.py  test_aperture.py  test_beam_beam.py  test_beam_beam_elliptical.py  test_beam_beam_tune_shift.py  test_beam_envelope.py  test_beam_losses.py  test_betatron_coupling.py  test_btag_efficiency.py  test_chromaticity.py  test_collins_soper.py  test_coupling_emittance.py  test_dilution.py  test_dipole.py  test_dipole_chromaticity.py  test_dipole_combined.py  test_dipole_edges.py  test_dispersion.py  test_drift.py  test_electroweak_afb.py  test_end_to_end.py  test_features.py  test_fodo_cell.py  test_hourglass.py  test_jacobian_edge.py  test_lam_tung.py  test_low_beta_insertion.py  test_luminosity.py  test_momentum_compaction.py  test_moving_bucket.py  test_plotting.py  test_quadrupole.py  test_quantum_lifetime.py  test_radiation.py  test_radiation_combined.py  test_reference_particle.py  test_rf_bucket.py  test_sextupole.py  test_skew_quadrupole.py  (+7 more)
tests/analytic/data/: delphes_formula_reference.json
tests/reference/: _madx.py  _xtrack_jit.py  conftest.py  test_betatron_coupling_madx.py  test_betatron_coupling_xtrack.py  test_chromaticity_xtrack.py  test_coupling_emittance_xtrack.py  test_dipole_combined_madx.py  test_dipole_combined_xtrack.py  test_dipole_edges_madx.py  test_dipole_edges_xtrack.py  test_dipole_madx.py  test_dipole_xtrack.py  test_dispersion_xtrack.py  test_drift_madx.py  test_drift_xtrack.py  test_fodo_twiss_madx.py  test_fodo_twiss_xtrack.py  test_momentum_compaction_xtrack.py  test_quadrupole_madx.py  test_quadrupole_xtrack.py  test_radiation_combined_madx.py  test_radiation_edges_madx.py  test_radiation_xtrack.py  test_sextupole_xtrack.py  test_synchrotron_tune_xtrack.py
